test/error/iocheck/err3.rzy
// Error: response is not allowed to write state

Err3 = Hfsm
  what : response():R{0,100};
  event : signal();
  
  state(A)
    A : state
      what : response():R{0,100}
        event();
        return 0;
      end
    end
  end  
end

